--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -91,13 +91,3 @@
   font-weight: bold;
 }
 
-
-.sidebar {
-  width: 240px;
-}
-
-@media (max-width: 768px) {
-  .sidebar {
-    display: none;
-  }
-}
